@@ -954,7 +954,7 @@ Supported functions with one float argument are:
     exp, log, log2, log10, sqrt, cbrt, trunc, ceil, floor, round, fabs.
 
 Supported functions with two float arguments are:
-    mul, div, add, sub, ulp,
+    mul, div, add, sub, ulp, prand,
     pow, atan2, hypot, fmin, fmax, fmod.
 
 Some more functions are:
@@ -967,6 +967,9 @@ avrtest_cmpf compares two floating-point values.  It returns -1, 0, +1
 when the values are less, equal or greater, respectively.
 It returns -128 for unordered comparisons.
 avrtest_strtof converts an ASCII string to float, just like strtof.
+avrtest_prandf returns an evenly distributed pseudo-random number
+in the specified range.  The pseudo-random source is the same like
+for avrtest_prand.
 
 AVRtest will terminate with an error if the host IEEE single cannot
 be used for emulation.
