@@ -979,7 +979,7 @@ Supported functions with one float argument are:
     exp, log, log2, log10, sqrt, cbrt, trunc, ceil, floor, round, fabs.
 
 Supported functions with two float arguments are:
-    mul, div, add, sub, ulp,
+    mul, div, add, sub, ulp, prand,
     pow, atan2, hypot, fmin, fmax, fmod.
 
 Some more functions are:
@@ -988,11 +988,14 @@ Some more functions are:
 > :warning:
 Don't forget to append `f` to the function name for the `float` versions.
 
-`avrtest_utof` and `avrtest_stof` convert uint32_t resp. int32_t to float.
-`avrtest_cmpf` compares two floating-point values.  It returns -1, 0, +1
+* `avrtest_utof` and `avrtest_stof` convert uint32_t resp. int32_t to float.
+* `avrtest_cmpf` compares two floating-point values.  It returns –1, 0, +1
 when the values are less, equal or greater, respectively.
-It returns -128 for unordered comparisons.
-`avrtest_strtof` converts an ASCII string to float, just like `strtof`.
+It returns –128 for unordered comparisons.
+* `avrtest_strtof` converts an ASCII string to float, just like `strtof`.
+* `avrtest_prandf` returns an evenly distributed pseudo-random number
+in the specified range.  The pseudo-random source is the same like
+for `avrtest_prand`.
 
 AVRtest will terminate with an error when the host IEEE single cannot
 be used for emulation.
